--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,5 +1,184 @@
 @import 'vars';
 @import 'fonts';
+@import 'reset';
+@import 'libs';
 @import 'global';
+
+.header-inner{
+    margin-top: 35px;
+    margin-bottom: 75px;
+    display: flex;
+    justify-content: space-between;
+    &__btns{
+        display: flex;
+        a{
+            color: #FFFFFF;
+        }
+    }
+    &__btn-item{
+        @extend %roboto-700;
+        font-size: 18px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #25D366;
+        border-radius: 30px;
+        width: 160px;
+        height: 40px;
+        margin-left: 25px;
+        padding-left: 35px;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            width: 21px;
+            height: 20px;
+            background-image: url('../images/icon/watsapp.svg');
+            left: 25px;
+        }
+        &VK{
+            background-color: #2594D3;
+            padding-left: 25px;
+            &::before{
+                width: 26px;
+                height: 17px;
+                background-image: url('../images/icon/vk.svg');
+                left: 45px;
+                top: 10px;
+            }
+        }
+    }
+    &__btn-profileInner{
+        position: relative;
+    }
+    &__btn-profile{
+        width: 40px;
+        height: 40px;
+        background-color: #E9E9E9;
+        box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08), -1px -1px 6px rgba(255, 255, 255, 0.5), -5px -5px 20px #FFFFFF, 5px 5px 20px #D3D3D3;
+        border-radius: 50%;
+        margin-left: 50px;
+        cursor: pointer;
+        background-image: url('../images/icon/profil.svg');
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+    &__btn-profileMenu{
+        position: absolute;
+        top: 50px;
+        right: 30px;
+        opacity: 0;
+        transition: all .3s;
+        &.header-inner__btn-profileMenu--active{
+            opacity: 1;
+            display: block;
+            width: 400px;
+            background-color: #E9E9E9;
+            border-radius: $br-def;
+            padding-top: 50px;
+            // &::before{
+            //     content: '';
+            //     position: absolute;
+            //     width: 24px;
+            //     height: 24px;
+            //     background-image: url('../images/icon/close.svg');
+            //     top: 15px;
+            //     right: 35px;
+            // }
+        }
+    }
+}
+.profileMenu{
+    &__item{
+        a{
+            color: $default;
+        }
+        max-width: 360px;
+        margin: 0 auto;
+        border-top: 1px solid #fff;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            width: 19px;
+            height: 18px;
+            background-image: url('../images/icon/order.svg');
+            left: 0px;
+            top: 20px;
+        }
+    }
+    &__item-text{
+        display: block;
+        padding-left: 41px;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+}
+.top-slider{
+    &__inner{
+        width: 100%;
+        text-align: center;
+    }
+    &__item{
+        text-align: left;
+        max-width: 1170px;
+        height: 380px;
+        background-color: $default;
+        border-radius: $br-def;
+        box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 40px 40px 50px rgba(0, 0, 0, 0.5);
+        border-radius: 80px 80px 80px 5px;
+        position: relative;
+        &::after{
+            content: '';
+            position: absolute;
+            width: 645px;
+            height: 323px;
+            background-image: url('../images/dekor/car.png');
+            right: 40px;
+            bottom: 0;
+        }
+    }
+    &__title{
+        max-width: 450px;
+        max-height: 146px;
+        font-size: 64px;
+        line-height: 75px;
+        color: #FFFFFF;
+        @extend %roboto-700;
+        margin-top: 45px;
+        margin-left: 96px;
+    }
+    &__link{
+        display: inline-block;
+        padding: 12px 60px 13px 30px;
+        background: #212629;
+        box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5), -1px -1px 6px rgba(255, 255, 255, 0.05), -5px -5px 20px rgba(255, 255, 255, 0.1), 5px 5px 20px rgba(0, 0, 0, 0.8);
+        border-radius: 99px;
+        @extend %roboto-700;
+        font-size: 18px;
+        margin-top: 80px;
+        margin-left: 96px;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-image: url('../images/icon/play.svg');
+            right: 30px;
+        }
+    }
+}
+.slick-slide{
+    opacity: .8;
+    transition: all 0.3s;
+}
+.slick-center{
+    .top-slider__item{
+        height: 500px;
+    }
+    height: 600px;
+    opacity: 1;
+}
 
 @import 'media';
