--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -64,6 +64,7 @@
         background-position: center center;
     }
     &__btn-profileMenu{
+        z-index: 100;
         position: absolute;
         top: 50px;
         right: 30px;
@@ -75,6 +76,7 @@
             width: 400px;
             background-color: #E9E9E9;
             border-radius: $br-def;
+            box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 60px 60px 80px rgba(0, 0, 0, 0.35);
             padding-top: 50px;
             // &::before{
             //     content: '';
@@ -181,4 +183,43 @@
     opacity: 1;
 }
 
+.category__inner{
+    margin-top: 20px;
+    &-title{
+        color: $default;
+        font-size: 28px;
+        @extend %roboto-700;
+        margin-bottom: 40px;
+    }
+}
+.category-top{ 
+    margin-bottom: 72px;
+    &__item{
+        font-size: 16px;
+        color: $default;
+        padding: 9px 19px;
+        background: #E9E9E9;
+        box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08), -1px -1px 6px rgba(255, 255, 255, 0.5), -5px -5px 20px #FFFFFF, 5px 5px 20px #D3D3D3;
+        border-radius: 99px;
+        margin-right: 15px;
+    }
+    &__item--active{
+        box-shadow: inset -1px -1px 3px rgba(255, 255, 255, 0.8), inset -6px -6px 5px rgba(255, 255, 255, 0.3), inset 1px 1px 3px rgba(0, 0, 0, 0.15), inset 6px 6px 5px rgba(0, 0, 0, 0.06);
+    }
+}
+
+.category-content{
+    &__item{
+        display: none;
+        &.category-content__item--active{
+            display: block;
+        }
+    }
+}
+.category__title{
+    margin-bottom: 35px;
+    font-size: 36px;
+    @extend %roboto-700;
+    color: $default;
+}
 @import 'media';
