--- a/app/index.njk
+++ b/app/index.njk
@@ -17,7 +17,13 @@
                 <div class="top-slider__item">
                     <div class="top-slider__content">
                         <h1 class="top-slider__title">Доставка<br> по все России</h1>
-                        <a hrefproduct.html"#" class="top-slider__link">Подробнее узнать о нас</a>
+                        {# <a hrefproduct.html"#" class="top-slider__link">Подробнее узнать о нас</a> #}
+                    </div>
+                </div>
+                <div class="top-slider__item">
+                    <div class="top-slider__content">
+                        <h1 class="top-slider__title">Доставка<br> по все России</h1>
+                        {# <a hrefproduct.html"#" class="top-slider__link">Подробнее узнать о нас</a> #}
                     </div>
                 </div>
                 <div class="top-slider__item">
@@ -29,13 +35,7 @@
                 <div class="top-slider__item">
                     <div class="top-slider__content">
                         <h1 class="top-slider__title">Доставка<br> по все России</h1>
-                        <a hrefproduct.html"#" class="top-slider__link">Подробнее узнать о нас</a>
-                    </div>
-                </div>
-                <div class="top-slider__item">
-                    <div class="top-slider__content">
-                        <h1 class="top-slider__title">Доставка<br> по все России</h1>
-                        <a hrefproduct.html"#" class="top-slider__link">Подробнее узнать о нас</a>
+                        {# <a hrefproduct.html"#" class="top-slider__link">Подробнее узнать о нас</a> #}
                     </div>
                 </div>
                 <div class="top-slider__item">
@@ -150,6 +150,7 @@
     {% include ('app/module/_footer/_footer.html') %}
 
     <script src="js/main.min.js"></script>
+    {% include ('app/module/_script/_script.html') %}
 </body>
 
 </html>
