--- a/app/product.njk
+++ b/app/product.njk
@@ -24,27 +24,42 @@
                     <img src="images/product/detail/1.jpg" alt="картинка товара" class="detail-box__img">
                     <div class="detail-box__content">
                         <h1 class="detail-box__content-title">Винилуритан -TP обивочная пористо-моналитная, сорт 1</h1>
-                        <div class="detail-box__content-price">430₽</div>
+                        <div class="product__price">Метр <span class="product__price-number">1</span> ₽</div>
                         <div class="detail-box__content-text">Прежде всего, сплочённость команды профессионалов влечет за собой процесс внедрения и модернизации кластеризации усилий. Мы вынуждены отталкиваться от того, что начало повседневной работы по формированию позиции не оставляет шанса для переосмысления внешнеэкономических политик. Таким образом, сложившаяся структура организации говорит о возможностях благоприятных перспектив.</div>
                         <h3 class="detail-box__content-titleForm">Размер:</h3>
                             <form action="#" class="detail-box__content-form">
-                                <label class="detail-box__content-label">
+                                {# <label class="detail-box__content-label">
                                     <span class="detail-box__content-span">Взять 5м</span>
                                     <div class="detail-box__content-box">
                                         <span class="detail-box__content-span">430₽</span>
                                         <input class="detail-box__content-input" type="radio" name="size">
                                         <span class="detail-box__content-checkbox"></span>
                                     </div>
-                                </label>
+                                </label> #}
                                 <label class="detail-box__content-label">
-                                    <span class="detail-box__content-span">Взять 5м</span>
+                                    <span class="detail-box__content-span">Указать метры</span>
                                     <div class="detail-box__content-box">
-                                        <span class="detail-box__content-span">430₽</span>
-                                        <input class="detail-box__content-input" type="radio" name="size">
-                                        <span class="detail-box__content-checkbox"></span>
+                                        <div class="product__quantity"></div>
                                     </div>
                                 </label>
-                                <button class="detail-box__content-btn">Заказать 430₽</button>
+                                <label class="detail-box__content-label">
+                                    <span class="detail-box__content-span">Куда доставить?</span>
+                                    <div class="detail-box__content-box">
+                                        <div class="product__size">
+                                            <div class="product__size-element" data-sb-curent-price="1" data-sb-curent-size="Соль-Илецк" data-sb-curent-id-or-vendor-code="056">Соль-Илецк</div>
+                                            <div class="product__size-element" data-sb-curent-price="2" data-sb-curent-size="Воронеж" data-sb-curent-id-or-vendor-code="036">Воронеж</div>
+                                        </div>
+                                    </div>
+                                </label>
+                                
+                                <button class="detail-box__content-btn"
+                                data-sb-id-or-vendor-code="056"
+                                data-sb-product-name="Винилуритан -TP обивочная пористо-моналитная, сорт 1"
+                                data-sb-product-price="1"
+                                data-sb-curent-size="Соль-Илецк"
+                                data-sb-product-quantity="1"
+                                data-sb-product-img="images/product/detail/1.jpg"
+                                >Добавить в корзину</button>
                             </form>
                         </h3>
                     </div>
@@ -54,6 +69,7 @@
     </main>
     {% include ('app/module/_footer/_footer.html') %}
     <script src="js/main.min.js"></script>
+    {% include ('app/module/_script/_script.html') %}
 </body>
 
 </html>
