--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -11,3 +11,22 @@ body{
     margin: 0 auto;
     padding: 15px;
 }
+.smart-basket__min{
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    border: none;
+    font-size: 12px;
+    background-color: transparent;
+    cursor: pointer;
+    &-icon{
+        display: none;
+    }
+    &-count{
+        position: absolute;
+        top: 5px;
+        right: 90%;
+    }
+}
