--- a/app/scss/product.scss
+++ b/app/scss/product.scss
@@ -112,3 +112,29 @@
         cursor: pointer;
     }
 }
+.product__size{
+    display: flex;
+}
+.product__size-element{
+    padding: 8px 10px;
+    margin-left: 10px;
+    background: #212629;
+    box-shadow: .778846px .778846px 3.11538px rgba(0,0,0,.5),-0.778846px -0.778846px 4.67308px rgba(255,255,255,.05),-3.89423px -3.89423px 15.5769px rgba(255,255,255,.1),3.89423px 3.89423px 15.5769px rgba(0,0,0,.8);
+    border-radius: 77.1058px;
+    border: none;
+    font-size: 14.0192px;
+    line-height: 16px;
+    text-align: center;
+    cursor: pointer;
+    &.product__size-element_active{
+        box-shadow: inset -1px -1px 3px rgba(119, 119, 119, 0.8),inset -6px -6px 5px rgba(37, 37, 37, 0.536),inset 1px 1px 3px rgba(0, 0, 0, 0.536),inset 6px 6px 5px rgba(55, 55, 55, 0.358);
+    }
+}
+.product__price{
+    display: inline-block;
+    line-height: 18px;
+    font-size: 22px;
+    @extend %roboto-700;
+    color: rgba(255,255,255,.6);
+    margin-bottom: 25px;
+}
