--- a/app/scss/product.scss
+++ b/app/scss/product.scss
@@ -49,7 +49,6 @@
     }
     &__content-text{
         line-height: 18px;
-        font-size: 13;
         color: rgba(255, 255, 255, 0.6);
         margin-bottom: 25px;
     }
@@ -138,3 +137,5 @@
     color: rgba(255,255,255,.6);
     margin-bottom: 25px;
 }
+
+@import 'media';
